fix: layout issues on small viewports

--- a/src/assets/scss/base/_vars.scss
+++ b/src/assets/scss/base/_vars.scss
@@ -39,7 +39,8 @@ $icons: 'html', 'css', 'javascript', 'accessibility', 'animation', 'eleventy',
 	--skip-link-font-size: 1rem;
 
 	// sizes
-	--taskbar-height: 1.7rem;
+	--taskbar-height: 2.04rem;
+	--settings-icon-width: 5.5rem;
 	--menu-width: 12rem;
 	--menu-height: 30.3rem;
 	--root-max-width: 68.75rem;
