--- a/src/assets/scss/blocks/_window.scss
+++ b/src/assets/scss/blocks/_window.scss
@@ -23,6 +23,10 @@
 	@media (max-width: #{vars.$breakpoint-desktop - vars.$px}) {
 		position: absolute;
 		inset: 0;
+
+		// overwrite width and height after resize
+		width: 100% !important;
+		height: 100% !important;
 	}
 
 	&__header {
@@ -99,12 +103,12 @@
 		font-weight: 400;
 	}
 
-	&[data-item='window'] {
-		@media (max-width: #{vars.$breakpoint-desktop - vars.$px}) {
-			/* using !important to override values provided from gsap's draggable */
-			transform: translate(0, 0) !important;
-		}
+	@media (max-width: #{vars.$breakpoint-desktop - vars.$px}) {
+		/* using !important to override values provided from gsap's draggable */
+		transform: translate(0, 0) !important;
+	}
 
+	&[data-item='window'] {
 		@media (min-width: vars.$breakpoint-desktop) {
 			transform: translate(
 				var(--window-position-x, 0),
